src/funcs1.h

apf::Mesh2* loadMesh(const char* dmg_name, const char* smb_name, int shape_type,
                     int order, int dim_ret[1]);
void initMesh(apf::Mesh* m, int number_entities[],
       apf::FieldShape* mshape_ptr_array[1], apf::Numbering* n_array[]);
apf::Field* initGeometry(apf::Mesh2* m);
void snapEdgeNodes(apf::Mesh2* m, apf::Field* fedge);
void pushMeshRef(apf::Mesh* m);
void popMeshRef(apf::Mesh* m);
int countMeshRefs(apf::Mesh* m);
// these functions do pass pointers
extern apf::FieldShape* getMeshShapePtr(apf::Mesh* m);
extern apf::FieldShape* getConstantShapePtr(int dimension);
extern int count(apf::Mesh* m_local, int dimension);
apf::MeshIterator* begin(apf::Mesh* m, int dim);
void end(apf::Mesh* m, apf::MeshIterator* it);
apf::MeshEntity* iterate(apf::Mesh* m, apf::MeshIterator* it);
void iteraten(apf::Mesh* m, apf::MeshIterator* it, int n);
apf::MeshEntity* deref(apf::Mesh2* m, apf::MeshIterator* it);
int getDimension(apf::Mesh* m);
extern void writeVtkFiles(char* name, apf::Mesh2* m_local, bool writeall,
                   apf::Field** f_arr, int nfields,
                   apf::Numbering** n_arr, int n_nums,
                   apf::GlobalNumbering** gn_arr, int n_gnums);
// geometric model functions

gmi_model* getModel(apf::Mesh* m);
apf::ModelEntity* toModel(apf::Mesh* m_local, apf::MeshEntity* e);
int getModelType(apf::Mesh* m_local, apf::ModelEntity* e);
int getModelTag(apf::Mesh* m_local, apf::ModelEntity* e);
// these functions pass pointers
extern int getMeshDimension(apf::Mesh2* m_local);
extern int getType(apf::Mesh2* m_local, apf::MeshEntity* e);
extern int getDownward(apf::Mesh2* m_local, apf::MeshEntity* e, int dimension, apf::MeshEntity* downwards[12]);
extern int countAdjacent(apf::Mesh2* m_local, apf::MeshEntity* e, int dimension);
void getAdjacent(apf::MeshEntity* adjacencies_ret[]);
int countBridgeAdjacent(apf::Mesh* m_local, apf::MeshEntity* origin, int bridge_dimension, int target_dimension);
void getBridgeAdjacent(apf::MeshEntity* adjacencies_ret2[]);
void getAlignment(apf::Mesh* m_local, apf::MeshEntity* elem, apf::MeshEntity* boundary, int which[1], bool flip[1], int rotate[1]);
// FieldShape functions
bool hasNodesIn(apf::FieldShape* fshape_local, int dimension);
extern int countNodesOn(apf::FieldShape* mshape_ptr, int type);
extern apf::EntityShape* getEntityShape(apf::FieldShape* mshape_local, int type);
int getOrder(apf::FieldShape* fshape);
const char* getFieldShapeName(apf::FieldShape* fshape);
// MeshElement related functions
extern apf::MeshElement* createMeshElement( apf::Mesh2* m_local, apf::MeshEntity* e);