src/apf.jl


  [`popMeshRef`](@ref) should be called on this pointer to free it.
"""
function loadMesh(dmg_name::AbstractString, smb_name::AbstractString,
                  order::Integer; shape_type::Integer=0)

  dim_ret = Array{Cint}(1)
  m_ptr = ccall( (:loadMesh, pumi_libname), Ptr{Void},
                 (Cstring, Cstring, Cint, Cint, Ptr{Cint}),
                 dmg_name, smb_name, shape_type, order, dim_ret)

  return m_ptr, dim_ret[1]
end

"""
  This function performs some initial numbering and counting of various
  mesh entities

  **Inputs**

   * m_ptr: a :Mesh* of an already loaded mesh
 
  **Outputs**

   * mshape_ptr: a :FieldShape* for the mesh coordinate field
   * num_entities: array of length 4 containing the number of entities of
                   each dimension, low to high, on this partition of the mesh.
                   All entities, including non-owned ones, are counted
   * n_array: array of length 4 containing a local numbering of the entities
              of each dimension, low to high.  If the mesh is 2 dimensional,
              accessing the 4th element of the array is undefined
"""
function initMesh(m_ptr::Ptr{Void})

  mshape_ptr_array = Array{Ptr{Void}}(1)
  num_entities = Array{Cint}(4)
  n_arr = Array{Ptr{Void}}(4)

  ccall( (:initMesh, pumi_libname), Void,
    (Ptr{Void}, Ptr{Cint}, Ptr{Ptr{Void}}, Ptr{Ptr{Void}}),
    m_ptr, num_entities, mshape_ptr_array, n_arr)

  return mshape_ptr_array[1], num_entities, n_arr
end


"""
  This function initializes the field used for storing the CAD parametric
  coordinates of the mid-edge nodes.

  **Inputs**

   * m_ptr: the apf::Mesh2 *

  **Outputs**

   * f_ptr: pointer to the apf::Field holding the CAD parametric coordinates
            of the mid-edge nodes.  If geometric model does not have parametric
            coordinates or if the mesh is linear, the null pointer is returned.
            The field has one node per edge with 2 values at each node.
"""
function initGeometry(m_ptr::Ptr{Void})

  f_ptr = ccall( (:initGeometry, pumi_libname), Ptr{Void}, (Ptr{Void},), m_ptr)

  return f_ptr
end


"""
  This function snaps the mid-edge nodes to the geometry and updates the
  apf::Field with the new parametric values.  Only call this function if the
  geometry model is capable of snapping.

  **Inputs**

   * m_ptr: the mesh pointer
   * f_ptr: the Field pointer
"""
function snapEdgeNodes(m_ptr::Ptr{Void}, f_ptr::Ptr{Void})

  ccall( (:snapEdgeNodes, pumi_libname), Void, (Ptr{Void}, Ptr{Void}), m_ptr, f_ptr)

  return nothing
end


function pushMeshRef(m_ptr::Ptr{Void})

  ccall( (pushMeshRef_name, pumi_libname), Void, (Ptr{Void},), m_ptr)
end

function popMeshRef(m_ptr::Ptr{Void})
  ccall( (popMeshRef_name, pumi_libname), Void, (Ptr{Void},), m_ptr)
end

function countMeshRefs(m_ptr::Ptr{Void})
  n = ccall( (:countMeshRefs, pumi_libname), Cint, (Ptr{Void},), m_ptr)

  return n
end



# no longer needed
function getMeshShapePtr(m_ptr::Ptr{Void})

  mshape_ptr = ccall( (getMeshShapePtr_name, pumi_libname), Ptr{Void}, (Ptr{Void},), m_ptr )
  return mshape_ptr
end


function getConstantShapePtr(dimension::Integer)
  mshape_ptr = ccall( ( getConstantShapePtr_name, pumi_libname), Ptr{Void}, (Int32,), dimension)

  return mshape_ptr

end

#------------------------------------------------------------------------------
# Iterators

import apf_types.MeshIterator


function MeshIterator(m_ptr::Ptr{Void}, dim::Integer)

  it = ccall( (:begin, pumi_libname), _MeshIterator, (Ptr{Void}, Cint,), m_ptr, dim)

  len = countJ(m_ptr, dim)
  return MeshIterator(it, m_ptr, len)
end

function free(it::MeshIterator)

  ccall((:end, pumi_libname), Void, (Ptr{Void}, _MeshIterator), it.m_ptr, it.p)

end

function iterate(it::MeshIterator)

  me = ccall((:iterate, pumi_libname), Ptr{Void}, (Ptr{Void}, _MeshIterator), it.m_ptr, it.p)

  return me
end

function iteraten(it::MeshIterator, n::Integer)

  me = ccall((:iteraten, pumi_libname), Ptr{Void}, (Ptr{Void}, _MeshIterator, Cint), it.m_ptr, it.p, n)

  return me
end


function deref(it::MeshIterator)

  me = ccall((:deref, pumi_libname), Ptr{Void}, (Ptr{Void}, _MeshIterator), it.m_ptr, it.p)

  return me
end

import Base: start, next, done, iteratorsize, iteratoreltype, eltype, length, size
using Base: HasLength, HasEltype


function start(it::MeshIterator)

  return iterate(it)
end


function next(iter::MeshIterator, state)

  # the state always leads the current element by 1, so we can do the done
  # check
  e_next = iterate(iter)
  new_state = e_next
  return state, new_state
end


function done(iter::MeshIterator, state)

  isdone = state == C_NULL
  if isdone
    free(iter)
  end

  return isdone
end


function iteratorsize(::Type{MeshIterator})
  return HasLength()
end

function length(iter::MeshIterator)
  return iter.len
end

function iteratoreltype(::Type{MeshIterator})
  return HasEltype()
end

function eltype(::Type{MeshIterator})
  return Ptr{Void}
end


#------------------------------------------------------------------------------

function getDimension(m_ptr::Ptr{Void})

  val = ccall( (:getDimension, pumi_libname), Cint, (Ptr{Void},), m_ptr)

  return val
end



function countJ(m_ptr, dimension::Integer)
# returns the number of entities of a particular dimension

  i = ccall( (count_name, pumi_libname), Cint, (Ptr{Void}, Cint), m_ptr, dimension)
  return i
end


"""
  Writes VTK files.  The keyword argument `writeall` determines which Numberings
  and Fields are written to the file.  By default only those with a FieldShape
  compatible with the the coordinate field are written.

  **Inputs**

   * name: file name
   * m_ptr: mesh pointer
   * f_ptrs: Vector of apf::Field*, defaults to array of zero length
   * n_ptrs: Vector of apf::Numbering*, defaults to array of zero length
   * gn_ptrs: Vector of apf::GlobalNumbering*, defaults to array of zero length

  **Keyword Arguments**

   * writeall: if true, write fields that are not representable cleanly in
               vtk file, default false

  For `f_ptrs`, `n_ptrs`, and `gn_ptrs`, only the objects in the vector will
  be considered for writing to the vtk file (according to `writeall`).  If the
  vector has zero length, all objects will be considered.
"""
function writeVtkFiles(name::AbstractString, m_ptr,
                       f_ptrs=Vector{Ptr{Void}}(0),
                       n_ptrs=Vector{Ptr{Void}}(0),
                       gn_ptrs=Vector{Ptr{Void}}(0);
                       writeall::Bool=false)
# write vtk files to be read by paraview

ccall( (writeVtkFiles_name, pumi_libname), Void,
      (Ptr{UInt8}, Ptr{Void}, CppBool, Ptr{Ptr{Void}}, Cint, Ptr{Ptr{Void}},
       Cint, Ptr{Ptr{Void}}, Cint), name, m_ptr, writeall,
      f_ptrs, length(f_ptrs), n_ptrs, length(n_ptrs), gn_ptrs, length(gn_ptrs))
  return nothing
end

function getModel(m_ptr::Ptr{Void})

  g = ccall( (getModel_name, pumi_libname), Ptr{Void}, (Ptr{Void},), m_ptr)
  return Model(g)
end


function toModel(m_ptr, entity_ptr)
# get the model entity a mesh entity is classified on

  model_entity_ptr = ccall( (toModel_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Ptr{Void}), m_ptr, entity_ptr)

  return ModelEntity(model_entity_ptr)
end

function getModelType(m_ptr, model_entity::ModelEntity)
# get the model entity *dimension*

  dim = ccall( (getModelType_name, pumi_libname), Int32, (Ptr{Void}, ModelEntity), m_ptr, model_entity)

  return dim
end

function getModelTag(m_ptr, model_entity::ModelEntity)
# get the dimension unique identifier of the model entity

  tag = ccall( (getModelTag_name, pumi_libname), Int32, (Ptr{Void}, ModelEntity), m_ptr, model_entity)

  return tag
end





function getMeshDimension(m_ptr)
# get mesh dimension

  i = ccall( (getMeshDimension_name, pumi_libname), Int32, (Ptr{Void},), m_ptr)
  return i
end


function getType(m_ptr, entity)
# get mesh dimension

  i = ccall( (getType_name, pumi_libname), Int32, (Ptr{Void}, Ptr{Void}), m_ptr, entity)
  return i
end

function getDownward(m_ptr, entity, dimension::Integer)
  
  # create array that can fit max number of downward adjacencies
  downwards = Array{Ptr{Void}}(12)


  i = ccall( (getDownward_name, pumi_libname), Int32, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Void}), m_ptr, entity, dimension, downwards)

  return downwards[1:i], i

end

function getDownward(m_ptr, entity, dimension::Integer, arr::AbstractArray{Ptr{Void}})
# populate arr with the downward entiteis of the specified dimension
# arr is not checked for size

  i = ccall( (getDownward_name, pumi_libname), Int32, (Ptr{Void}, Ptr{Void}, Int32, Ptr{Ptr{Void}}), m_ptr, entity, dimension, arr)

  return  i

end



function countAdjacent(m_ptr, entity, dimension::Integer)
# counts the number of upward adjacencies of meshentity with given dimension
# use with getAdjacent to fetch them

i = ccall( (countAdjacent_name, pumi_libname), Int32, (Ptr{Void}, Ptr{Void}, Int32), m_ptr, entity, dimension)

return i

end

function getAdjacent(num_adjacent::Integer)
# returns an array of MeshEntity* that are the upward adjacencies fetched by countAdjacent
# this could be made  more efficient by taking in an array and resizing it if it is too small
  adjacencies_ret = Array{Ptr{Void}}(num_adjacent)  # create the array

#  ccall( (getAdjacent_name, pumi_libname), Void, (Ptr{Void},), adjacencies_ret)
   getAdjacent(adjacencies_ret)

  return adjacencies_ret
end

function getAdjacent(arr::AbstractArray{Ptr{Void}})


  ccall( (getAdjacent_name, pumi_libname), Void, (Ptr{Ptr{Void}},), arr)

  return nothing
end


function countBridgeAdjacent(m_ptr, entity, bridge_dimension::Integer, target_dimension::Integer)
# counts the number of entities to be retrieved
# this is a second order adjacency

  i = ccall( (countBridgeAdjacent_name, pumi_libname), Int32, (Ptr{Void}, Ptr{Void}, Int32, Int32), m_ptr, entity, bridge_dimension, target_dimension)

  return i
end

function getBridgeAdjacent(arr::AbstractArray{Ptr{Void}})

  ccall( (getBridgeAdjacent_name, pumi_libname), Void, (Ptr{Void},), arr)

  return nothing
end

function getAlignment(m_ptr, elem, elem_boundary)
# gets which, flip, and rotate for elem_boundary, the mesh entity shared
# between elem and another element

# create variables
#=
which = convert(Int32, 42)
flip = convert(UInt8, 42)
rotate = convert(Int32, 42)
=#
which = Array{Int32}(1)
flip = Array{CppBool}(1)
rotate = Array{Int32}(1)

  ccall( (getAlignment_name, pumi_libname), Void, (Ptr{Void}, Ptr{Void}, Ptr{Void}, Ptr{Int32}, Ptr{CppBool}, Ptr{Int32}), m_ptr, elem, elem_boundary, which, flip, rotate)

  return which[1], convert(Bool, flip[1]), rotate[1]
end


function hasNodesIn(mshape_ptr, dimension::Integer)
# check whether this FieldShape* has nodes on entities of a given dimension

  i = ccall( (hasNodesIn_name, pumi_libname), CppBool, (Ptr{Void}, Int32), mshape_ptr, dimension)

  i_bool = convert(Bool, i)
#  println("hasNodesIn returned", i_bool)

  return i_bool

end

function countNodesOn(mshape_ptr, entity_type::Integer)
# count the number of nodes on an entity of the specified type (:Mesh::Type)
  i = ccall( (countNodesOn_name, pumi_libname), Int32, (Ptr{Void}, Int32), mshape_ptr, entity_type)

  return i

end

function getEntityShape(mshape_ptr, entity_type::Integer)
# get the EntityShape* (object describing shape functions) ofa given entity type

  eshape_ptr = ccall( (getEntityShape_name, pumi_libname), Ptr{Void}, (Ptr{Void}, Int32), mshape_ptr, entity_type)

  return eshape_ptr
end

function getOrder(mshape_ptr::Ptr{Void})

  order = ccall( (getOrder_name, pumi_libname), Cint, (Ptr{Void},), mshape_ptr)

  return Int(order)  # make order an Int for convenience
end


function getFieldShapeName(mshape_ptr::Ptr{Void})

  str= ccall( (:getFieldShapeName, pumi_libname), Cstring, (Ptr{Void},), mshape_ptr)

  return unsafe_string(str)
end



function createMeshElement(m_ptr, entity)
# creates a MeshElement from a MeshEntity
